fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -10,7 +10,6 @@
     border-radius: 2em;
     width: 14em;
     height: 14em;
-    margin-top: 1em;
     display: inline-block;
 }
 
@@ -63,6 +62,7 @@
 
     .projectEle {
         position: absolute;
+        margin-top: 1em;
     }
     
     .projectEle:nth-child(1) {
@@ -77,11 +77,9 @@
 @media screen and (max-width:768px) {
     .projectEle {
         position: static;
-    }
-
-    .projectEle {
         margin-left: 6em;
-    } 
+        margin-top: 1em;
+    }
 }
 
 
